public/assets/css/result_new.css
/* ... */
        @media (min-width: 1280px) {

            .img_porject{
                height:87px;
                width:190px;
                margin-top: 5px;
                margin-bottom: 5px;
            }

            .info_project{
            font-size: 12px;
            font-family: 'ABeeZee', sans-serif;
            color:#0D124F;
            font-weight: bold;

            }

            .info_project_res{
            font-size: 12px;
            font-family: 'ABeeZee', sans-serif;
            color:#3182ce;
            font-weight: bold;
            }

            .js_charts_style{
                width: 280px;
                height: 160px;
                margin: 0px auto;
            }

            .js_charts_style_line{
                width: 470px;
                height: 275px;
                margin: 0px auto;
            }

            .titulos_style{
            font-size:1.6rem;
            color: white;
            font-weight: bold;
            font-family: 'ABeeZee', sans-serif;
            }

            .tam_leyend_sols{
                font-size: 10px;
            }

            .solucions_style_name {
                font-size: 1.5rem;
                color: #0D08EE;
                font-weight: bold;
                font-family: 'ABeeZee', sans-serif;
            }

            .img_tr{
            height:58px;
            width:53px;
            }

            .margin_top_cap_term{
             margin-top:45px;
            }

            .cant_2_l{
            font-size:2.3rem;
            color:#0D124F;
            margin-left:90px;
            }

            .cant_2{
            font-size:2.3rem;
            color:#0D124F;
            }

            .capex_a{
            font-size:2.3rem;
            color:#0D124F;
            margin-left:40px;
            }

            .cant_style{
            font-size: 2rem;
            color: #0D124F;
            font-weight: bold;
            font-family: 'ABeeZee', sans-serif;
            }

            .point_solution{
            border-radius:100%;
            padding-left:8px;
            padding-right:8px;
            padding-top:1px;
            padding-bottom:1px;
            }

            .margin_sols_leyend_chart_1{
            margin-left:222px;
            }

            .margin_sols_leyend_chart_2{
            margin-right:35px;
            }

            .energy_star_style_img{
            margin-left: .5rem;
            margin-right: .5rem;
            margin-top: 1.5rem;
            width:100px;
            height:60px;
            }

            .eui_energy_val_style{
            margin-top: .75rem;
            font-weight: bold;
            font-family: 'ABeeZee', sans-serif;
            font-size: 3rem;
            }

            .eui_energy_style{
            margin-top: 2rem;
            color: #0D124F;
            font-weight: bold;
            font-family: 'ABeeZee', sans-serif;
            margin-right: .25rem;
            font-size: 1.5rem;
            }

            .ashrae_style_img{
            margin-left: .5rem;
            margin-right: .5rem;
            margin-top: 1.1rem;
            width: 100px;
            height: 70px;
            }

            .size_solutions_confort{
            font-size:1.5rem;
            color: #0D08EE;
            }

            .ancho_rang {
            width: 1rem;
            height: 2.5rem;
            }

            .puntero_medidas {
                width: 70px;
                height: 50px;
                margin-top: 8px;
            }

            .img_prod_lab{
              height:70px;
              width:60px;
            }

            .margin-top-button-suport{
            margin-top:.2rem;
            }

            .btn_roundf_retro{
                border:1px solid #ffff;
                background: #ffff;
                color:#3182ce;
                border-radius: 50%;
                width: 25px;
                height: 25px;
                z-index: 90090;
                display: flex;
                align-content: center;
                justify-content: center;
                text-align: center;
                align-items: center;
                cursor: pointer;
            }
                .btn_roundf_retro:hover {
                border:1px solid #4299e1;
                background: #4299e1;
                color:#ffff;
                border-radius: 50%;
                width: 25px;
                height: 25px;
                z-index: 90090;
                display: flex;
                align-content: center;
                justify-content: center;
                text-align: center;
                align-items: center;
                cursor: pointer;
            }

                .btn_roundf_retro:active {
                border:1px solid #ffff;
                background: #ffff;
                color:#4299e1;
                border-radius: 50%;
                width: 25px;
                height: 25px;
                z-index: 90090;
                display: flex;
                align-content: center;
                justify-content: center;
                text-align: center;
                align-items: center;
                cursor: pointer;
            }

            .img_payback{
                height:50px;
                width:50px;
            }

            .margin-r-payback{
            margin-right: 11rem;
            }

            .padding_pay {
                padding-right: 13px;
                padding-left: 13px;
            }

            .payback_cants_green{
            font-size: 2rem;
            }

            .medids-circle {
                    width: 4rem;
                    height: 4rem;
            }

            .cant-retorno-inversion{
            font-size: 1.3rem;
            }

        }
/* ... */

